# OpenGL-Shaders

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/glad/: glad.h
src/: glad.c  main.c
src/shader/: shader.fs  shader.vs
